<resources>
    <string name="app_name">Sight</string>

    <string name="lblEmail">Correo</string>
    <string name="lblPassword">Contraseña</string>
    <string name="lblPasswordConfirmacion">Confirmar Contraseña</string>
    <string name="lblPasswordNueva">Contraseña Nueva</string>
    <string name="lblPasswordActual">Contraseña Actual</string>

    <string name="btnIngresar">Ingresar</string>
    <string name="btnGuardar">Guardar</string>

    <string name="btnMiFichaMedica">Mi Ficha Médica</string>
    <string name="btnMisVecinos">Mis Vecinos de Confianza</string>
    <string name="btnMiContrasenia">Mi Contraseña</string>
    <string name="btnMisDenuncias">Mis Denuncias</string>
    <string name="btnMisNotificaciones">Mis Notificaciones</string>
    <string name="btnConfiguracion">Configuración</string>
    <string name="btnBotonBlueTooth">Botón Bluetooth</string>
    <string name="btnCamara">Adjuntar Foto</string>
    <string name="btnLogout">Desloguearme</string>
    <string name="btnCambiarContraseia">Guardar</string>
    <string name="btnBorrarBluetooth">Desasociar Botón Bluetooth</string>
    <string name="btnFilmar">Filmar</string>
    <string name="btnSacarFoto">Sacar foto</string>
    <string name="btnEnviarMensajeAdicional">Enviar Mensaje</string>

    <string name="tituloMiFichaMedica">Mi Ficha Médica</string>
    <string name="tituloMisVecinos">Mis Vecinos</string>
    <string name="tituloMiContrasenia">Mi Contraseña</string>
    <string name="tituloMisDenuncias">Mis Denuncias</string>
    <string name="tituloConfiguracion">Configuración</string>
    <string name="tituloMisNotificaciones">Mis Notificaciones</string>
    <string name="tituloPerfil">Mi Perfil</string>
    <string name="tituloBlueTooth">Botón Bluetooth</string>
    <string name="tituloCambiarContrasenia">Cambiar Contraseña</string>
    <string name="tituloCalificacion">Calificar Acción Policial</string>
    <string name="tituloEvento">Evento</string>
    <string name="tituloSos">SOS</string>
    <string name="tituloAdicionales">Información Adicional</string>

    <string name="success_ficha_medica">Ficha Médica Guardada</string>
    <string name="success_contrasenia_cambiada">La contraseña se ha modificado correctamente</string>
    <string name="success_mensaje_adicional_enviado">El mensaje ha sido enviado</string>

    <string name="error_usuario_requerido">Debe ingresar el correo</string>
    <string name="error_password_requerido">Debe ingresar la contraseña</string>
    <string name="error_password_incorrecto">El correo y/o contraseña son incorrectos</string>

    <string name="error_ficha_medica_no_existente">El usuario no posee ficha médica</string>
    <string name="error_ficha_medica_requerida">Ficha Médica requerida</string>

    <string name="error_conexion">Error: Compruebe que tiene conexión a internet</string>

    <string name="error_permiso">Necesita permiso de ubicación y grabación de video para poder brindar información adicional ante un evento.</string>
    <string name="error_permiso_camara">No se tiene permiso de acceso a la camara</string>
    <string name="error_permiso_ubicacion">No se tiene permiso de acceso a la ubicación</string>
    <string name="error_permiso_escritura_externa">No se tiene permiso de escritura</string>
    <string name="error_permiso_bluetooth">No se tiene permiso de bluetooth</string>
    <string name="error_permiso_video">No tiene permiso para grabar video</string>
    <string name="error_mensaje_adicional_vacio">El mensaje no puede ser vacio</string>

    <string name="tiempo_gps_milisec">10000</string>
    <string name="distancia_gps_metros">30</string>

    <string name="mis_denuncias_vacio">No realizó ninguna denuncia</string>
    <string name="mis_notificaciones_vacio">No recibió ninguna notificación</string>
    <string name="mis_vecinos_confirmacion_borrado">¿Está seguro que desea eliminar al vecino %s de la lista de confianza?</string>
    <string name="mi_ficha_medica_confirmacion_guardado">¿Está seguro que desea actualizar la ficha médica?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
