<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_header" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imageView2" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_full_with"
        android:text="@string/btnIngresar"
        app:layout_constraintStart_toStartOf="@+id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_full_with"
        android:ems="10"
        android:hint="@string/lblPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/txtUsername"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_full_with"
        android:ems="10"
        android:hint="@string/lblEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="@id/labelBarrier" />

</androidx.constraintlayout.widget.ConstraintLayout>